<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignwayDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reboot">Reboot</string>
    <string name="hide_bar">HideBar</string>
    <string name="api_version">ApiVersion</string>
    <string name="android_model">AndroidModel</string>
    <string name="android_verson">AndroidVesrsion</string>
    <string name="firmware_version">FirmwareVesrsion</string>
    <string name="kernel_version">KernelVesrsion</string>
    <string name="firmware_date">FirmwareDate</string>
    <string name="android_display">AndroidDisplay</string>
    <string name="running_size">RunningSize</string>
    <string name="storage_size">StorageSize</string>
    <string name="screen_dpi">GetScreenDpi</string>
    <string name="set_screen_dpi">SetScreenDpi</string>
    <string name="off_hdmi">OffHdmi</string>
    <string name="on_hdmi">OnHdmi</string>
    <string name="on_backlight">OnLvds</string>
    <string name="off_backlight">OffLvds</string>
    <string name="shut_down">ShutDown</string>
    <string name="shot_screen">ShotScreen</string>
    <string name="rotation">Rotation</string>
    <string name="root">Shell</string>
    <string name="usb_path">UsbPath</string>
    <string name="uart_path">UartPath</string>
    <string name="sdcard_path">SdcardPath</string>
    <string name="install_apk">SlientInstallApk</string>
    <string name="uninstall_apk">SlientUninstallApk</string>
    <string name="killbackgroundapk">Killbackgroundapk</string>
    <string name="upgrade_system">UpgradeSystem</string>
    <string name="set_rotation">SetRotation</string>
    <string name="get_rotation">GetRotation</string>
    <string name="getcurrentnettype">CurrentNetType</string>
    <string name="getCurrentNetDBM">CurrentNetDBM</string>    
    <string name="get_eth_mac">EthMacAddress</string>
    <string name="get_eth_mode">EthMode</string>
    <string name="set_eth_static">SetEthStatic</string>
    <string name="get_eth_static_ip">GetEthStaticIp</string>
    <string name="get_eth_dhcp_ip">GetEthDhcpIp</string>
    <string name="get_system_time">GetSystemTime</string>
    <string name="set_system_time">SetSystemTime</string>
    <string name="set_power_on_time">SetPowerOnTime</string>
    <string name="set_power_off_time">SetPowerOffTime</string>
    <string name="get_power_on_time">GetPowerOnTime</string>
    <string name="get_power_off_time">GetPowerOffTime</string>
    <string name="set_power_onoff_time">SetPowerOnOffTime</string>
    <string name="get_hdmi_status">GetHdmiinStatus</string>
    <string name="get_screen_number">GetScreenNumber</string>
    <string name="setDeepStandby">SetDeepStandby</string>
    <string name="setDeepStandbyWakeTime">SetDeepStandbyWakeTime</string>
    <string name="reqMcuVersion">ReqMcuVersion</string>
    <string name="setMcuWatchDog">SetMcuWatchDog</string>
    <string name="video_switch">VideoSwitch</string>
    <string name="test">Test</string>
    <string-array name="dpi_items">
        <item>1920_1080_50</item>
        <item>1920_1080_60</item>
        <item>1366_768_50</item>
        <item>1366_768_60</item>
        <item>1280_720_50</item>
        <item>1280_720_60</item>
        <item>1024_768_50</item>
        <item>1024_768_60</item>
        <item>1600_900_50</item>
        <item>1600_900_60</item>
        <item>1440_900_50 </item>
        <item>1440_900_60 </item>
        <item>1680_1050_50</item>
        <item>1680_1050_60</item>
        <item>1360_768_50</item>
        <item>1360_768_60</item>
        <item>1280_1024_50</item>
        <item>1280_1024_60</item>
	<item>1280_800_50</item>
	<item>1280_800_60</item>
    </string-array>
</resources>

