<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.signway.test.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:text="@string/hide_bar"
                android:layout_weight="1"
                android:id="@+id/hide_bar"
                android:onClick="onTestClick"
                android:layout_height="0dp" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/api_version"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/api_version"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/android_model"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/android_model"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/android_verson"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/android_version"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:onClick="onTestClick"
                android:text="@string/firmware_version"
                android:layout_weight="1"
                android:id="@+id/firmware_version"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/kernel_version"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/kernel_version"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/firmware_date"
                android:layout_weight="1"
                android:id="@+id/firmware_date"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/android_display"
                android:layout_weight="1"
                android:id="@+id/android_display"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/running_size"
                android:layout_weight="1"
                android:id="@+id/running_size"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/storage_size"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/storage_size"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/screen_dpi"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/screen_dpi"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/set_screen_dpi"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/set_screen_dpi"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/off_hdmi"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/off_hdmi"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/on_hdmi"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/on_hdmi"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/off_backlight"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/off_backlight"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/on_backlight"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/on_backlight"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/shot_screen"
                android:layout_weight="1"
                android:id="@+id/shot_screen"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/shut_down"
                android:layout_weight="1"
                android:id="@+id/shut_down"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/reboot"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/reboot"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/set_rotation"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/set_rotation"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_rotation"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/get_rotation"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:onClick="onTestClick"
                android:text="@string/root"
                android:layout_weight="1"
                android:id="@+id/root"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:onClick="onTestClick"
                android:text="@string/usb_path"
                android:layout_weight="1"
                android:id="@+id/usb_path"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:onClick="onTestClick"
                android:text="@string/uart_path"
                android:layout_weight="1"
                android:id="@+id/uart_path"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/sdcard_path"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/sdcard_path"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/install_apk"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/install_apk"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/uninstall_apk"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/uninstall_apk"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/killbackgroundapk"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/killbackgroundapk"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/upgrade_system"
                android:layout_weight="1"
                android:onClick="onTestClick"
                android:id="@+id/upgrade_system"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/getcurrentnettype"
                android:layout_weight="1"
                android:id="@+id/getcurrentnettype"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/getCurrentNetDBM"
                android:layout_weight="1"
                android:id="@+id/getCurrentNetDBM"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_eth_mac"
                android:layout_weight="1"
                android:id="@+id/get_eth_mac"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_eth_mode"
                android:layout_weight="1"
                android:id="@+id/get_eth_mode"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/set_eth_static"
                android:layout_weight="1"
                android:id="@+id/set_eth_static"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />

            <!-- <Button
                android:layout_width="match_parent"
                android:text="@string/get_eth_static_ip"
                android:layout_weight="1"
                android:id="@+id/get_eth_static_ip"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />-->
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_eth_dhcp_ip"
                android:layout_weight="1"
                android:id="@+id/get_eth_dhcp_ip"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_system_time"
                android:layout_weight="1"
                android:id="@+id/get_system_time"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/set_system_time"
                android:onClick="onTestClick"
                android:layout_weight="1"
                android:id="@+id/set_system_time"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/set_power_on_time"
                android:layout_weight="1"
                android:id="@+id/set_power_on_time"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/set_power_off_time"
                android:layout_weight="1"
                android:id="@+id/set_power_off_time"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/get_power_on_time"
                android:layout_weight="1"
                android:id="@+id/get_power_on_time"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/get_power_off_time"
                android:layout_weight="1"
                android:id="@+id/get_power_off_time"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <!-- <Button
                android:layout_width="match_parent"
                android:text="@string/video_switch"
                android:layout_weight="1"
                android:id="@+id/video_switch"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />  -->
            <!-- <Button
                android:layout_width="match_parent"
                android:text="@string/get_hdmi_status"
                android:layout_weight="1"
                android:id="@+id/get_hdmi_status"
                android:onClick="onTestClick"
                android:layout_height="match_parent" /> -->

            <!-- <Button
                android:layout_width="match_parent"
                android:text="@string/get_screen_number"
                android:layout_weight="1"
                android:id="@+id/get_screen_number"
                android:onClick="onTestClick"
                android:layout_height="match_parent" /> -->

            <Button
                android:layout_width="match_parent"
                android:text="@string/setDeepStandby"
                android:layout_weight="1"
                android:id="@+id/setDeepStandby"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/setDeepStandbyWakeTime"
                android:layout_weight="1"
                android:id="@+id/setDeepStandbyWakeTime"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/reqMcuVersion"
                android:layout_weight="1"
                android:id="@+id/reqMcuVersion"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:text="@string/setMcuWatchDog"
                android:layout_weight="1"
                android:id="@+id/setMcuWatchDog"
                android:onClick="onTestClick"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
